# bieglers-event-photo-culler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  index.html  package.json  vite.config.ts
scripts/: copy-keeper-raws.sh
spike-egui/: Cargo.toml  README.md
spike-egui/src/: loader.rs  main.rs  scan.rs
src/: App.tsx  api.ts  clipboard.rs  export.rs  loader.rs  main.rs  model.rs  persist.rs  scan.rs  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Grid.tsx  HelpOverlay.tsx  Icons.tsx  Loupe.tsx  Thumbnail.tsx  Timeline.tsx  Toast.tsx  Toolbar.tsx
