# Throwaway native-UI spike — NOT part of the shipping app.
# Goal: feel out an egui rewrite of the two hard surfaces (virtualized thumbnail
# grid + sliding-window loupe) so we can benchmark perceived latency and, above
# all, *memory determinism* against the current Tauri build before committing.
#
# Independent crate: no Tauri, no webview, no Cargo.lock sharing with src-tauri
# (so the brotli pin saga there doesn't apply here). The EXIF/thumbnail logic in
# src/scan.rs is copied from src-tauri/src/lib.rs; in a real rewrite it would be
# factored into a shared `culler-core` crate that both binaries depend on.
[package]
name = "spike-egui"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.29"          # egui + winit + glow; the actual rewrite would prefer
egui = "0.29"            # the wgpu backend to hand-manage GPU textures directly.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
kamadak-exif = "0.5"     # imported as `exif`, same as the main app
chrono = "0.4"
rayon = "1"
rfd = "0.15"             # native folder picker — demonstrates "native dialogs
                         # via rfd, framework-independent" from the analysis.

# Throwaway: optimize for fast iteration, not binary size.
[profile.dev]
opt-level = 1            # decode-heavy; un-optimized image/jpeg is painfully slow
