[package]
name = "photo-culler"
version = "0.1.0"
description = "Event photo culler"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
rayon = "1"
chrono = "0.4"
arboard = "3"
# Pin: brotli 8.0.3 (via tauri-codegen) uses alloc-no-stdlib 2.x itself, but
# brotli-decompressor 5.0.2 moved to 3.x, so the two halves of brotli fail to
# compile together. Hold the alloc crates + brotli-decompressor on the 2.x line.
# Remove once brotli's dependency set is internally consistent again.
alloc-no-stdlib = "=2.0.4"
alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
